Pieuvre/tests/Proofs/ShouldFail/notelim.8pus
Goal A -> B -> C.
intros.
elim h0.
Admitted.
